# scratchboost

./: LICENSE  README.md  pyproject.toml  scratch.py
src/scratchboost/: __init__.py  histogram.py  model.py  node.py  splitter.py  utils.py
tests/: conftest.py  test_model.py  test_splitter.py  test_utils.py
