[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "scratchboost"
authors = [{ name = "James Inlow" }]
version = "0.1.0"
description = "Small scratch implemntation of the XGBoost algorithm"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "LICENSE" }
keywords = [
  "machine learning",
  "xgboost",
  "tree model",
  "decision tree",
]
dependencies = ["pandas>=1.5.2", "numpy>=1.24.0", "seaborn>=0.11.2"]

[project.optional-dependencies]
test = ["xgboost==1.6.1", "pytest", "black", "isort"]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
